# All_in_one

./: .gitignore  .ruff.toml  Dockerfile  commands.sh  docker-compose.yml  main.py  pyproject.toml  requirements.txt
all_in_one/: main.py
all_in_one/authorization/: dependencies.py
all_in_one/authorization/depends/: authorization_depends.py
all_in_one/authorization/models/: authorization_models.py
all_in_one/content/: models.py
all_in_one/core/: config.py  cors.py  db.py  dependencies.py  security.py
all_in_one/depends/: authorization_depends.py
all_in_one/models/: authorization_models.py  photo_and_video.py
all_in_one/modules/auth/: dependencies.py  models.py  repositories.py  routers.py  schemas.py
all_in_one/modules/content/: models.py  utils.py
all_in_one/modules/likes/: models.py
all_in_one/modules/utils/: telegram_bot.py
detail/: db.md  poetry.md
