[project]
name = "all-in-one"
version = "0.1.0"
description = "my FastAPI project"
authors = [{ name = "Mihaltsow Aleksei", email = "michalcow99@mail.ru" }]
readme = ""
requires-python = ">=3.11,<4.0"
dependencies = [
    "annotated-types (==0.7.0)",
    "anyio (==4.8.0)",
    "backports-tarfile (==1.2.0)",
    "bcrypt (==4.2.1)",
    "build (==1.2.2.post1)",
    "cachecontrol (==0.14.2)",
    "certifi (==2024.12.14)",
    "cffi (==1.17.1)",
    "charset-normalizer (==3.4.1)",
    "cleo (==2.1.0)",
    "click (==8.1.8)",
    "crashtest (==0.4.1)",
    "cryptography (==44.0.0)",
    "distlib (==0.3.9)",
    "dulwich (==0.22.7)",
    "fastapi (==0.115.7)",
    "fastjsonschema (==2.21.1)",
    "filelock (==3.17.0)",
    "greenlet (==3.1.1)",
    "h11 (==0.14.0)",
    "idna (==3.10)",
    "importlib-metadata (==8.6.1)",
    "installer (==0.7.0)",
    "jaraco-classes (==3.4.0)",
    "jaraco-context (==6.0.1)",
    "jaraco-functools (==4.1.0)",
    "jeepney (==0.8.0)",
    "keyring (==25.6.0)",
    "more-itertools (==10.6.0)",
    "msgpack (==1.1.0)",
    "packaging (==24.2)",
    "passlib (==1.7.4)",
    "pkginfo (==1.12.0)",
    "platformdirs (==4.3.6)",
    "poetry (==2.0.1)",
    "poetry-core (==2.0.1)",
    "pycparser (==2.22)",
    "pydantic (==2.10.6)",
    "pydantic-core (==2.27.2)",
    "pyjwt (==2.10.1)",
    "pyproject-hooks (==1.2.0)",
    "python-dotenv (==1.0.1)",
    "rapidfuzz (==3.11.0)",
    "requests (==2.32.3)",
    "requests-toolbelt (==1.0.0)",
    "secretstorage (==3.3.3)",
    "shellingham (==1.5.4)",
    "sniffio (==1.3.1)",
    "sqlalchemy (==2.0.37)",
    "sqlmodel (==0.0.22)",
    "starlette (==0.45.2)",
    "tomlkit (==0.13.2)",
    "trove-classifiers (==2025.1.15.22)",
    "types-passlib (==1.7.7.20241221)",
    "typing-extensions (==4.12.2)",
    "urllib3 (==2.3.0)",
    "uvicorn (==0.34.0)",
    "virtualenv (==20.29.1)",
    "zipp (==3.21.0)",
    "alembic (==1.14.1)",
    "asyncpg (==0.30.0)",
    "dnspython (==2.7.0)",
    "email-validator (==2.2.0)",
    "eralchemy (==1.5.0)",
    "graphviz (==0.20.3)",
    "httpcore (==1.0.7)",
    "httpx (==0.28.1)",
    "inflect (==7.5.0)",
    "mako (==1.3.8)",
    "markupsafe (==3.0.2)",
    "mypy (==1.15.0)",
    "mypy-extensions (==1.0.0)",
    "psycopg2-binary (==2.9.10)",
    "pydantic-settings (==2.7.1)",
    "pytelegrambotapi (==4.26.0)",
    "python-multipart (==0.0.20)",
    "python-telegram-bot (==21.10)",
    "ruff (==0.9.4)",
    "sqlalchemy-stubs (==0.4)",
    "typeguard (==4.4.1)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 79
skip-magic-trailing-comma = true
